<resources>
    <string name="app_name">FirstFragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_to_second">Go To Second</string>
    <string name="submit">Submit</string>
    <string name="enter_username_hint">Enter Username</string>
    <string name="first_fragment_title">Home Fragment</string>
    <string name="profile_fragment_welcome">Welcome</string>
    <string name="welcome">Welcome</string>
    <string name="_12th_or_less">12th or Less</string>
    <string name="bachelors">Bachelors</string>
    <string name="graduate">Graduate</string>
    <string name="phd">PhD</string>
    <string name="other">Other</string>
</resources>